@@ -1,3 +1,6 @@
+2014-05-31 Molnar Karoly <molnarkaroly@users.sf.net>
+	* tools/device-help.pl: Updated according to http://validator.w3.org.
+
 2014-05-24 Molnar Karoly <molnarkaroly@users.sf.net>
 	* tools/device-help.pl: updated
 
